# SW_architecture_project

./: .$SW_project.drawio.bkp  .env  .gitignore  .gitmodules  README.md  SW_project.drawio  docker-compose.yaml  init.sh
Dialog_service/: CMakeLists.txt  Dockerfile
Dialog_service/include/: common.hpp  dialog_controller.hpp  dialog_repository.hpp  dialog_repository_hz.h  dialog_repository_in_mem.hpp  dialog_service.hpp  domain.hpp
Dialog_service/src/: dialog_controller.cpp  dialog_repository.cpp  dialog_repository_hz.cpp  dialog_repository_in_mem.cpp  dialog_service.cpp  domain.cpp  main.cpp
app/: requirements.txt
app/src/: main.py
app/src/guest/: models.py
booking/: Dockerfile  booking.py  requirements.txt
front/: .env  config.py  main.py  navigation.py  requirements.txt
front/pages/: admin.py  admin_chat.py  change_menu.py  client_chat.py  make_order.py  menu.py  reservation_admin.py  reserve_table.py  stats.py
front/pages/change_menu_func/: add_item.py  change_stock.py  get_menu.py
gateway/: Dockerfile
gateway/src/: main.py  utils.py
gateway/src/routers/: app.py  booking.py  models.py  support.py  worker.py
support/: .env  Dockerfile  requirements.txt
support-worker/: Dockerfile
support-worker/src/: main.py  service.py
support/src/: common.py  main.py  models.py  route.py  router.py  service.py  utils.py
support_worker/src/: common.py  router.py  service.py  utils.py
worker/: .env  Dockerfile  requirements.txt
worker/src/: common.py  main.py  service.py
